test/Fail/Issue1109-1.err
Issue1109-1.agda:12.17-26: error: [NoParseForApplication]
Could not parse the application x ○ x ● x
Operators used in the grammar:
  ● (infix operator, level 20) [_●_ (Issue1109-1.agda:5.3-6)]
  ○ (infix notation, level 20) [f (Issue1109-1.agda:4.3-4)]  
when scope checking x ○ x ● x
